Preparar proyecto para despliegue en Render